Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriTextRetnumber.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, number> yoda
        check
            number ret = yoda:useForce(one, two)
        detect e
            output "passed"
        end
     end
end
