Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjTextRetBoolObjFail.quorum
class Main
    action Main
        text one = "green"
        Text two
        two:SetValue("green")
        Yoda<text, Text, Boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
